# ChangeLog for sys-apps/calculate-lib
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-lib-2.1.6 (03 Mar 2010)

  03 Mar 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-lib-2.1.6.ebuild:
  Version bump.

*calculate-lib-2.1.4 (01 Dec 2009)

  01 Dec 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  +calculate-lib-2.1.4.ebuild, +metadata.xml:
  Ebuild for new version of calculate-lib.
