@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/calculate-server
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*calculate-server-2.1.10 (15 Mar 2010)
+
+  15 Mar 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  -calculate-server-2.1.9.ebuild, +calculate-server-2.1.10.ebuild:
+  Bump version.
 
 *calculate-server-2.1.9 (03 Mar 2010)
 
