@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/calculate-lib
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*calculate-lib-2.1.7 (15 Mar 2010)
+
+  15 Mar 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-lib-2.1.7.ebuild:
+  Bump version.
 
 *calculate-lib-2.1.6 (03 Mar 2010)
 
